[project]
name = "graph-repairing"
version = "0.0.1"
description = ""
readme = "README.md"
authors = [
  {name = "Your Name", email = "your@example.com"},
]
requires-python = ">=3.12"
dependencies = [
    "easydict>=1.13",
    "ipykernel>=7.1.0",
    "neo4j>=6.0.3",
    "networkx>=3.2.1",
    "pandas>=2.0.0",
    "python-dotenv>=1.0.0",
    "matplotlib>=3.0.0",
    "python-Levenshtein>=0.21.0",
]